--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "laravel/framework": "5.1.*",
         "orangehill/iseed": "dev-master",
         "forone/admin": "dev-master"
-
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -50,5 +49,10 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "repositories": [
+      {"type": "git", "url": "https://github.com/ForoneTech/ForoneAdmin.git"},
+      {"packagist": false}
+    ]
+
 }
