--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
         "preferred-install": "dist"
     },
     "repositories": [
-      {"type": "git", "url": "https://github.com/ForoneTech/ForoneAdmin.git"}
+      {"type": "git", "url": "https://github.com/ForoneTech/ForoneAdmin.git"},
+      {"type": "composer", "url": "http://packagist.phpcomposer.com"},
+      {"packagist": false}
     ]
+
 
 }
