--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,27 @@
 /node_modules
 Homestead.yaml
 .env
+# OS
+.DS_Store
+Thumbs.db
+vagrant
+.vagrant
+
+# IDE
+.idea
+_ide_helper.php
+
+# Configuration
+/app/config/local
+/app/config/packages
+/app/config/prerelease
+/app/config/staging
+/app/config/production
+/app/config/release
+.env.*.php
+.env.php
+.env
+
+/public/packages
+/public/uploads
+
